// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add Equipment Should not render Modal 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={false}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffff",
            "borderRadius": 5,
            "height": "90%",
            "width": "90%",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "rgba(76, 154, 42, 1)",
            "fontSize": 20,
            "fontWeight": "bold",
            "paddingTop": 20,
          }
        }
      >
        Advertise for equipment
      </Text>
      <RCTScrollView
        style={
          Object {
            "flex": 1,
            "padding": 20,
            "width": "100%",
          }
        }
      >
        <View>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Name of equipment"
            rejectResponderTermination={true}
            style={
              Object {
                "borderColor": "black",
                "borderWidth": 0.2,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Description of equipment"
            rejectResponderTermination={true}
            style={
              Object {
                "borderColor": "black",
                "borderWidth": 0.2,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <TextInput
            allowFontScaling={true}
            keyboardType="numeric"
            onChangeText={[Function]}
            placeholder="Price"
            rejectResponderTermination={true}
            style={
              Object {
                "borderColor": "black",
                "borderWidth": 0.2,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-evenly",
                "marginTop": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 17,
                  "fontWeight": "bold",
                }
              }
            >
              Sell
            </Text>
            <View
              accessibilityLiveRegion="polite"
              accessibilityRole="radio"
              accessibilityState={
                Object {
                  "checked": true,
                  "disabled": undefined,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 18,
                    "padding": 6,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#03dac4",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "transform": Array [
                            Object {
                              "scaleX": 1,
                            },
                          ],
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰄬
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-evenly",
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 17,
                  "fontWeight": "bold",
                }
              }
            >
              Hire
            </Text>
            <View
              accessibilityLiveRegion="polite"
              accessibilityRole="radio"
              accessibilityState={
                Object {
                  "checked": false,
                  "disabled": undefined,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 18,
                    "padding": 6,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "opacity": 0,
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#03dac4",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "transform": Array [
                            Object {
                              "scaleX": 1,
                            },
                          ],
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰄬
                </Text>
              </View>
            </View>
          </View>
          <Image
            source={
              Object {
                "uri": "data:image/jpeg;base64,",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 100,
                "marginBottom": 20,
                "width": 100,
              }
            }
          />
          <View
            accessibilityRole="button"
            accessibilityState={Object {}}
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(76, 154, 42, 1)",
                    },
                  ]
                }
              >
                add image
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(76, 154, 42, 1)",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "bottom": 0,
            "height": "10%",
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Submit
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`Add Equipment Should render modal 1`] = `
<Modal
  animationType="fade"
  hardwareAccelerated={false}
  onRequestClose={[Function]}
  transparent={true}
  visible={true}
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(0, 0, 0, 0.5)",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#ffff",
            "borderRadius": 5,
            "height": "90%",
            "width": "90%",
          },
        ]
      }
    >
      <Text
        style={
          Object {
            "color": "rgba(76, 154, 42, 1)",
            "fontSize": 20,
            "fontWeight": "bold",
            "paddingTop": 20,
          }
        }
      >
        Advertise for equipment
      </Text>
      <RCTScrollView
        style={
          Object {
            "flex": 1,
            "padding": 20,
            "width": "100%",
          }
        }
      >
        <View>
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Name of equipment"
            rejectResponderTermination={true}
            style={
              Object {
                "borderColor": "black",
                "borderWidth": 0.2,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <TextInput
            allowFontScaling={true}
            onChangeText={[Function]}
            placeholder="Description of equipment"
            rejectResponderTermination={true}
            style={
              Object {
                "borderColor": "black",
                "borderWidth": 0.2,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <TextInput
            allowFontScaling={true}
            keyboardType="numeric"
            onChangeText={[Function]}
            placeholder="Price"
            rejectResponderTermination={true}
            style={
              Object {
                "borderColor": "black",
                "borderWidth": 0.2,
                "marginTop": 20,
                "textAlign": "center",
              }
            }
            underlineColorAndroid="transparent"
            value=""
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-evenly",
                "marginTop": 20,
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 17,
                  "fontWeight": "bold",
                }
              }
            >
              Sell
            </Text>
            <View
              accessibilityLiveRegion="polite"
              accessibilityRole="radio"
              accessibilityState={
                Object {
                  "checked": true,
                  "disabled": undefined,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 18,
                    "padding": 6,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#03dac4",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "transform": Array [
                            Object {
                              "scaleX": 1,
                            },
                          ],
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰄬
                </Text>
              </View>
            </View>
          </View>
          <View
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-evenly",
              }
            }
          >
            <Text
              style={
                Object {
                  "fontSize": 17,
                  "fontWeight": "bold",
                }
              }
            >
              Hire
            </Text>
            <View
              accessibilityLiveRegion="polite"
              accessibilityRole="radio"
              accessibilityState={
                Object {
                  "checked": false,
                  "disabled": undefined,
                }
              }
              accessible={true}
              focusable={true}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Array [
                  Object {
                    "overflow": "hidden",
                  },
                  Object {
                    "borderRadius": 18,
                    "padding": 6,
                  },
                ]
              }
            >
              <View
                style={
                  Object {
                    "opacity": 0,
                  }
                }
              >
                <Text
                  accessibilityElementsHidden={true}
                  allowFontScaling={false}
                  importantForAccessibility="no-hide-descendants"
                  pointerEvents="none"
                  selectable={false}
                  style={
                    Array [
                      Object {
                        "color": "#03dac4",
                        "fontSize": 24,
                      },
                      Array [
                        Object {
                          "lineHeight": 24,
                          "transform": Array [
                            Object {
                              "scaleX": 1,
                            },
                          ],
                        },
                        Object {
                          "backgroundColor": "transparent",
                        },
                      ],
                      Object {
                        "fontFamily": "Material Design Icons",
                        "fontStyle": "normal",
                        "fontWeight": "normal",
                      },
                      Object {},
                    ]
                  }
                >
                  󰄬
                </Text>
              </View>
            </View>
          </View>
          <Image
            source={
              Object {
                "uri": "data:image/jpeg;base64,",
              }
            }
            style={
              Object {
                "alignSelf": "center",
                "height": 100,
                "marginBottom": 20,
                "width": 100,
              }
            }
          />
          <View
            accessibilityRole="button"
            accessibilityState={Object {}}
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Array [
                  Object {},
                ]
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "#007AFF",
                      "fontSize": 18,
                      "margin": 8,
                      "textAlign": "center",
                    },
                    Object {
                      "color": "rgba(76, 154, 42, 1)",
                    },
                  ]
                }
              >
                add image
              </Text>
            </View>
          </View>
        </View>
      </RCTScrollView>
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "rgba(76, 154, 42, 1)",
            "borderBottomLeftRadius": 5,
            "borderBottomRightRadius": 5,
            "bottom": 0,
            "height": "10%",
            "justifyContent": "center",
            "opacity": 1,
            "position": "absolute",
            "width": "100%",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "white",
              "fontSize": 20,
              "fontWeight": "bold",
            }
          }
        >
          Submit
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;
